--- a/languages/en.lang
+++ b/languages/en.lang
@@ -94,7 +94,7 @@ handlerEvents.threadBanned=This group has been banned from using the bot\n» Rea
 handlerEvents.onlyAdminBox=This group is currently enabled only group administrators can use the bot
 handlerEvents.onlyAdminBot=❌ | Currently only bot's admin can use bot
 handlerEvents.commandNotFound=O uncle hoki aunty yo "%1" vnne command mero module ma xina lw!!🙄🫣
-handlerEvents.commandNotFound2=ㅤ
+handlerEvents.commandNotFound2=First time bot use garese yestai ho!! Command dina ne sekauna parne!?😒 #help type gara Sabai Cmd Herna lai!
 handlerEvents.commandSyntaxError=The command you are using is wrong syntax, please type %1help %2 to see the details of how to use this command
 handlerEvents.onlyAdmin=❌ | Only group administrators can use the command "%1"
 handlerEvents.onlyAdminToUseOnReply=❌ | Only group administrators can use the reply function of the command "%1"
