--- a/languages/en.lang
+++ b/languages/en.lang
@@ -93,8 +93,8 @@ handlerEvents.userBanned=You have been banned from using the bot\n» Reason: %1\
 handlerEvents.threadBanned=This group has been banned from using the bot\n» Reason: %1\n» Time: %2\n» Thread ID: %3
 handlerEvents.onlyAdminBox=This group is currently enabled only group administrators can use the bot
 handlerEvents.onlyAdminBot=❌ | Currently only bot's admin can use bot
-handlerEvents.commandNotFound=O  𝗬𝗼 [»"%1"«] 𝗠𝗼𝗱𝘂𝗹𝗲 𝗠𝗲𝗿𝗼 𝗖𝗼𝗺𝗺𝗮𝗻𝗱 𝗠𝗮 𝗫𝗶𝗻𝗮💭
-handlerEvents.commandNotFound2= 𝗖𝗼𝗺𝗺𝗮𝗻𝗱 𝗧𝘆𝗽𝗲 𝗚𝗮𝗿𝗮𝗻𝗮 𝗕𝗮𝗯𝗶𝗲🤍🌸
+handlerEvents.commandNotFound=❌ | 𝗬𝗼 [»"%1"«] 𝗠𝗼𝗱𝘂𝗹𝗲 𝗠𝗲𝗿𝗼 𝗖𝗼𝗺𝗺𝗮𝗻𝗱 𝗠𝗮 𝗫𝗶𝗻𝗮.!
+handlerEvents.commandNotFound2= 𝗖𝗼𝗺𝗺𝗮𝗻𝗱 𝗧𝘆𝗽𝗲 𝗚𝗮𝗿𝗮𝗻𝗮 𝗕𝗮𝗯𝗶𝗲.!🤍🌸
 handlerEvents.commandSyntaxError=The command you are using is wrong syntax, please type %1help %2 to see the details of how to use this command
 handlerEvents.onlyAdmin=❌ | Only group administrators can use the command "%1"
 handlerEvents.onlyAdminToUseOnReply=❌ | Only group administrators can use the reply function of the command "%1"
