--- a/languages/en.lang
+++ b/languages/en.lang
@@ -93,13 +93,13 @@ handlerEvents.userBanned=You have been banned from using the bot\n» Reason: %1\
 handlerEvents.threadBanned=This group has been banned from using the bot\n» Reason: %1\n» Time: %2\n» Thread ID: %3
 handlerEvents.onlyAdminBox=This group is currently enabled only group administrators can use the bot
 handlerEvents.onlyAdminBot=❌ | Currently only bot's admin can use bot
-handlerEvents.commandNotFound=❌ | 𝗬𝗼 [»"%1"«] 𝗠𝗼𝗱𝘂𝗹𝗲 𝗠𝗲𝗿𝗼 𝗖𝗼𝗺𝗺𝗮𝗻𝗱 𝗠𝗮 𝗫𝗶𝗻𝗮.!
-handlerEvents.commandNotFound2= 𝗖𝗼𝗺𝗺𝗮𝗻𝗱 𝗧𝘆𝗽𝗲 𝗚𝗮𝗿𝗮𝗻𝗮 𝗕𝗮𝗯𝗶𝗲.!🤍🌸
+handlerEvents.commandNotFound=🌸 | 𝐘𝐎 | "%1" | 𝐌𝐎𝐃𝐔𝐋𝐄 𝐌𝐄𝐑𝐎 𝐂𝐎𝐌𝐌𝐀𝐍𝐃 𝐌𝐀 𝐗𝐈𝐍𝐀.! #𝐇𝐄𝐋𝐏 𝐓𝐎 𝐒𝐄𝐄 𝐀𝐋𝐋 | 3𝐏𝐀𝐆𝐄𝐒 |
+handlerEvents.commandNotFound2= 🔰 | 𝐂𝐎𝐌𝐌𝐀𝐍𝐃 𝐓𝐘𝐏𝐄 𝐆𝐀𝐑𝐀𝐍𝐀 𝐁𝐀𝐁𝐈𝐄 🤍🌸
 handlerEvents.commandSyntaxError=The command you are using is wrong syntax, please type %1help %2 to see the details of how to use this command
 handlerEvents.onlyAdmin=❌ | Only group administrators can use the command "%1"
 handlerEvents.onlyAdminToUseOnReply=❌ | Only group administrators can use the reply function of the command "%1"
 handlerEvents.onlyAdminToUseOnReaction=❌ | Only group administrators can use the reaction function of the command "%1"
-handlerEvents.onlyAdminBot2=❌ | Only bot's admin can use the command "%1"
+handlerEvents.onlyAdminBot2=❌ | Only Aayusha can use the command "%1"
 handlerEvents.onlyAdminBot2ToUseOnReply=❌ | Only bot's admin can use the reply function of the command "%1"
 handlerEvents.onlyAdminBot2ToUseOnReaction=❌ | Only bot's admin can use the reaction function of the command "%1"
 handlerEvents.waitingForCommand=⏱ You are in the waiting time to use this command, please come back after %1s
